# InspyredMemos

./: .gitignore  AGENTS.md  README.md  pyproject.toml
inspyred_memo_client/: __init__.py
inspyred_memo_server/: __about__.py  __init__.py
inspyred_memo_server/common/: meta.py
inspyred_memo_server/config/: __init__.py  email.py
inspyred_memo_server/config/dirs/: __init__.py  defaults.py
inspyred_memo_server/database/: __init__.py  email.py
inspyred_memo_server/database/crypt/: __init__.py
inspyred_memo_server/database/user/: __init__.py
inspyred_memo_server/errors/: __init__.py  config.py
inspyred_memo_server/errors/database/: __init__.py
inspyred_memo_server/log_engine/: __init__.py  config.py
inspyred_memo_server/utils/: __init__.py  decorators.py
inspyred_memo_server/utils/helpers/: __init__.py
inspyred_memo_server/utils/helpers/system/: __init__.py
inspyred_memo_server/utils/helpers/system/linux/: __init__.py
inspyred_memo_server/utils/helpers/system/mac_os/: __init__.py
inspyred_memo_server/utils/helpers/system/windows/: __init__.py
